# FileDataLake

./: .gitignore  README.md  TODO.md
Dokumente/: Idee.vsd  hints.txt
src/: Cargo.toml  fdl.toml
src/file_data_lake_reader/: Cargo.toml
src/file_data_lake_reader/src/: app_dtos.rs  database_handler.rs  helper.rs  image_handler.rs  main.rs  new_file_worker.rs  python_runner.rs
src/file_data_lake_webserver/: Cargo.toml
src/file_data_lake_webserver/src/: files.rs  main.rs
src/old/: oldcode.txt
src/python/: example.py
src/wwwroot/: index.html  navigation.js  updload.js  upload.js
