[workspace]
members = ["file_data_lake_reader", "file_data_lake_webserver"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["The little Punk"]
description = "A short description of my package"
documentation = "https://example.com/bar"
publish = false
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
