[package]
name = "file_data_lake_reader"
edition = "2024"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
confy = "2.0.0"
ctrlc = "3.5.1"
deadpool-sqlite = "0.12.1"
env_logger = "0.11.8"
exitcode = "1.1.2"
log = "0.4.28"
notify = "8.1.0"
pyo3 = "0.27.2"
serde = "1.0.228"
serde_derive = "1.0.228"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.rusqlite]
version = "0.37.0"
features = ["bundled"]

[dependencies.uuid]
version = "1.19.0"
# Lets you generate random UUIDs
features = [
    "v4","v7","std"
]

[[bin]]
name = "fdl_reader"
path = "src/main.rs"
