[package]
name = "file_data_lake_webserver"
edition = "2024"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
env_logger = "0.11.8"

[[bin]]
name = "fdl_webserver"
path = "src/main.rs"
