[package]
name = "file_data_lake_webserver"
edition = "2024"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
actix-files = "0.6.9"
actix-multipart = "0.7.2"
actix-web = "4.12.1"
env_logger = "0.11.8"
futures = "0.3.31"
sanitize-filename = "0.6.0"
log = "0.4.28"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
deadpool-sqlite = "0.12.1"
confy = "2.0.0"

[[bin]]
name = "fdl_webserver"
path = "src/main.rs"
